fix toast from being overlapped

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -28,3 +28,7 @@ iframe{
   width: 100%;
   height: 100%;
 }
+
+.toast {
+  z-index: 9998;
+}
